adding inbound email to project
Change-Id: I00b61e95fd735351b407dbf762ea475ed747f11b

--- a/emails/inbound-quest/index.html
+++ b/emails/inbound-quest/index.html
@@ -20,8 +20,7 @@
 								<table class="container">
 									<tr align="left">
 										<td align="left" valign="top">
-											<!--$$onlineoption$$-->
-											<div>
+											<div data-o2="$$onlineoption$$">
 												<table class="row">
 													<tr align="left">
 														<td class="wrapper last" align="left" valign="top">
@@ -29,8 +28,7 @@
 															<table class="twelve columns">
 																<tr align="left">
 																	<td align="left" valign="top">
-																		<!--$$onlineurl$$-->
-																		View this email <a href="/">online</a>
+																		View this email <a href="$$onlineurl$$/">online</a>
 																	</td>
 																	<td class="expander" align="left" valign="top"></td>
 																</tr>
@@ -46,7 +44,7 @@
 														<table class="twelve columns">
 															<tr align="left">
 																<td align="left" valign="top">
-																	<img src="https://software.dell.com/images/email/dsg-logo.png" align="left" /></td>
+																	<img src="https://www.quest.com/images/shared/quest-logo.png" align="left" /></td>
 																<td class="expander" align="left" valign="top"></td>
 															</tr>
 														</table>
@@ -78,7 +76,7 @@
 														<table class="five columns">
 															<tr align="left">
 																<td align="left" valign="top">
-																	<img src="https://software.dell.com/images/email/dsg-logo.png" align="left" /></td>
+																	<img src="https://www.quest.com/images/shared/quest-logo.png" align="left" /></td>
 																<td class="expander" align="left" valign="top"></td>
 															</tr>
 														</table>
@@ -88,14 +86,14 @@
 														<table class="seven columns">
 															<tr align="left">
 																<td class="text-sm" align="left" valign="top">
-																	Dell Software
+																	Quest
 																	<br />
 																	4 Polaris Way, Aliso Viejo, CA 92656
 																	<br /><br />
 																	Contact Us:
 																	<br />
 																	1-800-306-9329
-																	<br /><a href="mailto:info@software.dell.com">info@software.dell.com</a>
+																	<br /><a href="mailto:info@quest.com">info@quest.com</a>
 																</td>
 																<td class="expander" align="left" valign="top"></td>
 															</tr>
@@ -107,15 +105,13 @@
 												<tr align="left">
 													<td class="wrapper last text-sm center" align="center" valign="top">
 														<center>
-															<a href="https://software.dell.com">Software.Dell.com</a> | <a href="https://software.dell.com/legal/privacy.aspx">Privacy Statement</a> |
-															<a
-																href="https://ecomm.dell.com/GSC/ListRemoval/Index?returnPath=www.dell.com/content/topics/global.aspx/policy/en/country_specific&amp;s=gen&amp;~section=023&amp;c=us&amp;l=en">Unsubscribe
-																from Dell</a> | <a href="https://software.dell.com/unsubscribe">Unsubscribe
-															from Dell Software</a>
+															<a href="https://www.quest.com">Quest.com</a> |
+															<a href="https://www.quest.com/legal/privacy.aspx">Privacy Statement</a> |
+															<a href="https://www.quest.com/unsubscribe">Unsubscribe from Quest</a>
 
 															<br />
 
-															This email is an advertisement or solicitation from Dell Software. © 2016 Dell Inc. All rights reserved.
+															This email is an advertisement or solicitation from Quest Software. © 2016 Quest Software Inc. ALL RIGHTS RESERVED.
 														</center>
 													</td>
 												</tr>
@@ -133,7 +129,7 @@
 	</tr>
 </table>
 
-<img src="http://activate.software.dell.com/no-content?at=7" width="1" height="1" />
+<img src="http://cm.quest.com/no-content?at=7" width="1" height="1" />
 
 </body>
 </html>
