adding inbound email to project. complete.
Change-Id: I39b2d4d6d85ee762df2795c906d1a93e076f2aaf

--- a/emails/inbound/quest/index.html
+++ b/emails/inbound/quest/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<!--http://o2/EmailTemplates/?action=edit&id=79932&Type=0 (original)-->
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width" />
 	<link rel="stylesheet" href="/css/global-v2.css">
@@ -28,7 +27,7 @@
 															<table class="twelve columns">
 																<tr align="left">
 																	<td align="left" valign="top">
-																		View this email <a href="$$onlineurl$$/">online</a>
+																		View this email <a data-o2-href="$$onlineurl$$/">online</a>
 																	</td>
 																	<td class="expander" align="left" valign="top"></td>
 																</tr>
@@ -59,7 +58,8 @@
 					</tr>
 				</table>
 
-				$$content$$
+				<!--O2[$$content$$]-->
+				[[file:content]]
 
 				<table class="footer text-size-12 border-t-grey">
 					<tr align="left">
