--- a/emails/inbound/sonicwall/index.html
+++ b/emails/inbound/sonicwall/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<!--http://o2/EmailTemplates/?action=edit&id=107088&Type=0 (original)-->
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width" />
 	<link rel="stylesheet" href="/css/global-v2.css">
@@ -28,7 +27,7 @@
 															<table class="twelve columns">
 																<tr align="left">
 																	<td align="left" valign="top">
-																		View this email <a href="$$onlineurl$$/">online</a>
+																		View this email <a data-o2-href="$$onlineurl$$/">online</a>
 																	</td>
 																	<td class="expander" align="left" valign="top"></td>
 																</tr>
@@ -44,7 +43,7 @@
 														<table class="twelve columns">
 															<tr align="left">
 																<td align="left" valign="top">
-																	<img src="https://www.sonicwall.com/images/logos/dell-security.jpg" align="left" /></td>
+																	<img src="https://www.sonicwall.com/images/email/sonicwall-logo.png" align="left" /></td>
 																<td class="expander" align="left" valign="top"></td>
 															</tr>
 														</table>
@@ -76,7 +75,7 @@
 														<table class="five columns">
 															<tr align="left">
 																<td align="left" valign="top">
-																	<img src="https://www.sonicwall.com/images/logos/dell-security.jpg" align="left" /></td>
+																	<img src="https://www.sonicwall.com/images/email/sonicwall-logo.png" align="left" /></td>
 																<td class="expander" align="left" valign="top"></td>
 															</tr>
 														</table>
@@ -86,7 +85,7 @@
 														<table class="seven columns">
 															<tr align="left">
 																<td class="text-sm" align="left" valign="top">
-																	SonicWALL
+																	SonicWall
 																	<br />
 																	5455 Great America Parkway, Santa Clara, CA 95054
 																	<br /><br />
@@ -105,13 +104,13 @@
 												<tr align="left">
 													<td class="wrapper last text-sm center" align="center" valign="top">
 														<center>
-															<a href="https://www.sonicwall.com">SonicWALL.com</a> |
+															<a href="https://www.sonicwall.com">SonicWall.com</a> |
 															<a href="https://www.sonicwall.com/legal/privacy.aspx">Privacy Statement</a> |
-															<a href="http://www.sonicwall.com/unsubscribe">Unsubscribe</a>
+															<a href="https://www.sonicwall.com/unsubscribe">Unsubscribe</a>
 
 															<br />
 
-															This email is an advertisement or solicitation from SonicWALL. © 2016 Quest Software Inc. ALL RIGHTS RESERVED.
+															This email is an advertisement or solicitation from SonicWall. © 2016 Quest Software Inc. ALL RIGHTS RESERVED.
 														</center>
 													</td>
 												</tr>
