Adding more patterns into versioning.
Change-Id: I37032a6cb9274ef91dc21ba149adb3f537935f03

--- a/emails/eClerx/index.html
+++ b/emails/eClerx/index.html
@@ -4,6 +4,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width" />
 	<link rel="stylesheet" href="/css/global-v2.css">
+	<style type="text/css">
+		/* Insert custom stylesheet */
+	</style>
 </head>
 <body>
 
